Fix scroll slowness issue on iOS devices

--- a/src/app/core/components/left-navigation/left-navigation.component.scss
+++ b/src/app/core/components/left-navigation/left-navigation.component.scss
@@ -49,6 +49,7 @@
     background: $side-menu-background;
     border: 1px solid $main-nav-bar-active-text;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     padding: 0;
     position: relative;
     left: 0;
